<resources>
    <string name="app_name">GluCalc</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search an item</string>
    <string name="search_food_hint">Search food</string>
    <string name="add_title">Add new item</string>
    <string name="delete_title">Delete item</string>
    <string name="select_title">Select item</string>
    <string name="select_performed_title">Select item done</string>
    <string name="save_title">Save item</string>
    <string name="next_title">Next</string>
    <string-array name="left_menu_items_array">
        <item>New Meal</item>
        <item>Food</item>
        <item>Check</item>
        <item>Settings</item>
        <item>Export</item>
        <item>About Glucalc</item>
    </string-array>
    <string-array name="left_submenu_report_items_array">
        <item>Meal Diary</item>
        <item>Insulin Overview</item>
    </string-array>
    <string-array name="left_submenu_settings_items_array">
        <item>Meals and Insulin</item>
        <item>Favourite Foods</item>
        <item>Food Categories</item>
        <item>Initial Setup</item>
        <item>Reset</item>
    </string-array>
    <string-array name="left_submenu_about_items_array">
        <item>Project information</item>
        <item>Terms of use</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_new_meal_type_hint">Enter a meal type</string>
    <string name="edit_new_meal_type">Meal type</string>
    <string name="enter_new_meal_blood_glucose_hint">Enter a blood glucose value</string>
    <string name="edit_new_meal_blood_glucose">Blood glucose</string>
    <string name="favourite_food_switch">Favourite foods</string>
    <string name="new_meal_second_step_carbohydrate">Carbohydrate</string>
    <string name="new_meal_second_step_insulin">Insulin</string>
    <string name="new_meal_second_step_blood_glucose">Blood glucose</string>
    <string name="new_meal_second_step_select">Select</string>
    <string name="new_meal_second_step_food">Food</string>
    <string name="new_meal_second_step_quantity">Quantity</string>
    <string name="new_meal_second_step_insulin_unit">[IU]</string>
    <string name="new_meal_third_step_title">Adjust Insulin</string>
    <string name="new_meal_third_step_carbohydrate">Carbohydrate</string>
    <string name="new_meal_third_step_insulin">Insulin</string>
    <string name="new_meal_third_step_blood_glucose">Blood glucose</string>
    <string name="new_meal_third_step_bolus_given">Given</string>
    <string name="new_meal_third_step_bolus_unit">[IU]</string>
    <string name="send_meal_switch">Send the meal</string>
    <string name="edit_new_meal_food_quantity">Quantity :</string>
    <string name="enter_new_meal_food_quantity_hint">Enter a quantity</string>
    <string name="edit_new_meal_food_carbohydrate">Carbohydrates :</string>
    <string name="enter_new_meal_food_carbohydrate_hint">Enter carbohydrates</string>
    <string name="edit_new_meal_food_carbohydrate_quantity">g</string>
    <string name="edit_new_meal_food_selected_food">Selected Food :</string>
    <string name="edit_new_meal_food_selected_food_name">Food :</string>
    <string name="edit_new_meal_food_selected_food_quantity">Quantity :</string>
    <string name="edit_new_meal_food_selected_food_carbohydrate">Carbohydrates :</string>
    <string name="edit_new_meal_food_selected_food_unit">Unit :</string>
    <string name="edit_category_food">Category :</string>
    <string name="enter_category_hint">Enter a food category</string>
    <string name="selected">Selected</string>
    <string name="edit_food">Food :</string>
    <string name="enter_food_hint">Enter a food name</string>
    <string name="edit_food_category">Category :</string>
    <string name="edit_food_carbohydrate">Carbohydrates :</string>
    <string name="enter_food_carbohydrate_hint">Enter a carbohydrate</string>
    <string name="edit_food_quantity">Quantity :</string>
    <string name="enter_food_quantity_hint">Enter a food quantity</string>
    <string name="edit_food_unit">Unit :</string>
    <string name="enter_food_unit_hint">Enter a unit</string>
    <string name="edit_favourite_food_quantity">Quantity :</string>
    <string name="enter_favourite_food_quantity_hint">Enter a quantity</string>
    <string name="edit_favourite_food_carbohydrate">Carbohydrate :</string>
    <string name="enter_favourite_food_carbohydrate_hint">Enter a carbohydrate</string>
    <string name="edit_favourite_food_carbohydrate_quantity">g</string>
    <string name="edit_favourite_food_selected_food">Selected Food :</string>
    <string name="edit_favourite_food_selected_food_name">Food :</string>
    <string name="edit_favourite_food_selected_food_quantity">Quantity :</string>
    <string name="edit_favourite_food_selected_food_carbohydrate">Carbohydrate :</string>
    <string name="edit_favourite_food_selected_food_unit">Unit :</string>
    <string name="enter_meal_type_name_hint">Enter a meal type</string>
    <string name="edit_meal_type_name">Meal type</string>
    <string name="enter_meal_type_food_target_hint">Enter a value</string>
    <string name="edit_meal_type_food_target">Food target</string>
    <string name="edit_meal_type_food_target_unit">[g]</string>
    <string name="enter_meal_type_blood_glucose_target_hint">Enter a value</string>
    <string name="edit_meal_type_blood_glucose_target">Blood glucose target</string>
    <string name="enter_meal_type_insulin_sensitivity_hint">Enter a value</string>
    <string name="edit_meal_type_insulin_sensitivity">Sensitivity factor</string>
    <string name="enter_meal_type_insulin_hint">Enter a value</string>
    <string name="edit_meal_type_insulin">Insulin</string>
        <string name="edit_meal_type_name_info">This field defines the name of the meal. If you add a number before the name of the meal, you can sort the meal in order of numbers.</string>
        <string name="edit_meal_type_food_target_info">This field defines in grams, the recommended quantity of carbohydrates for the meal.</string>
        <string name="edit_meal_type_blood_glucose_target_info">This field defines the wished blood glucose value after the meal, expressed in the selected unit.</string>
        <string name="edit_meal_type_insulin_sensitivity_info">The sensitivity factor is also named the correction factor. It expresses the reduction of the blood glucose value when 1 IU of insulin is injected. This value must be define in the same unit as the one selected in GluCalc.\n\nThe sensibility factor allows to calculate the necessary quantity of insulin to reach the target blood glucose. This quantity is separate of the meals insulin and must be valid even if no carbohydrates are ingested.</string>
        <string name="edit_meal_type_insulin_info">This field define the requirement of insulin corresponding to 10 grams of carbohydrates ingested during the meal.</string>
    <string name="insulin_overview_target_food_unit">[g]</string>
    <string name="insulin_overview_sensitivity_unit">[mmol/l]</string>
    <string name="insulin_overview_blood_glucose_target_unit">[mmol/l]</string>
    <string name="insulin_overview_insulin_unit">[IU/10 g]</string>
    <string name="insulin_overview_recap_blood_glucose">Blood glucose</string>
    <string name="insulin_overview_recap_insulin">Insulin</string>
    <string name="insulin_overview_recap_blood_glucose_unit">[mmol/l]</string>
    <string name="insulin_overview_recap_insulin_unit">IU</string>
    <string name="configuration_first_step_main_title">Configuration</string>
    <string name="configuration_first_step_blood_glucose">Select the unit of measurement of blood glucose</string>
    <string name="blood_glucose_millimoles_per_liter">Millimoles per liter</string>
    <string name="blood_glucose_milligrams_per_liter">Milligrams per deciliter</string>
    <string name="blood_glucose_grams_per_liter">Grams per liter</string>
    <string name="configuration_first_step_warning">Entering configuration parameters must be monitored by the medical team</string>
    <string name="save_button_string">Save</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_fields_missing">Please complete all fields</string>
    <string name="dialog_error_categories_missing">Please create at least one category first</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="dialog_confirm_category_delete_cascade">A category contains some food, therefore this action will delete them too. Do you want to continue?</string>
    <string name="dialog_confirm_food_import">Please be aware that all current food will be lost. Food from the chosen file will be imported. Do you want to continue?</string>
    <string name="dialog_confirm_reset_data">Do you really want to delete the selected data ?</string>
    <string name="dialog_configuration_meal_type_title">Define Meal Type</string>
    <string name="dialog_configuration_meal_type_message">GluCalc run correctly when you define meal types with medical team supervision</string>
    <string name="dialog_configuration_meal_create">Create</string>
    <string name="dialog_configuration_meal_cancel">Cancel</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_no">No</string>
    <string name="imported_food">Food imported : {0}</string>
    <string name="imported_food_failed">Food import failed!</string>
    <string name="export_category_column">Category</string>
    <string name="export_food_column">Food</string>
    <string name="export_carbohydrate_column">Carbohydrate</string>
    <string name="export_quantity_column">Quantity</string>
    <string name="project_information_title1">ABOUT GLUCALC</string>
    <string name="project_information_part1">Glucalc helps the diabetic patient with calculations at mealtime. It calculates the amount of carbohydrates based on selected foods.\n\nGluCalc then determines the amount of insulin required following the correction factor or correction dose method.\n\nMeal insulin = (Insulin amount for 10 g Carbohydrate x Ingested Carbodydrates / 10) + (Measured Blood Glucose – Target Blood Glucose) / Insulin Sensitivity Factor\n\nFormula parameters have to be determined by a medical professional.\n\nYou can find more information on web site www.glucalc.ch\n\nGlucalc is a non-profitable project. It was designed and developed in Switzerland as a private initiative with support of interested partners and collaboration with an high school of business administration.\n</string>
    <string name="project_information_title2">PROMOTION, CONCEPT AND PROJECT MANAGEMENT</string>
    <string name="project_information_part2">Louis Boyer\nLa Tour-de-Trême - Switzerland\n</string>
    <string name="project_information_title3">MEDICAL SUPPORT AND SUPERVISION</string>
    <string name="project_information_part3">Dr. Michael Hauschild\nCHUV - Centre Hospitalier Universitaire Vaudois\nDivision d\'Endocrinologie Diabétologie et Obésité Pédiatrique\nLausanne - Switzerland\n</string>
    <string name="project_information_title4">MOBILE APP DEVELOPMENT</string>
    <string name="project_information_part4">Julien Mottet\nGrolley - Switzerland\n\nWe are still looking for partners for app maintenance and improvement. If you are interested, you can contact us at the following adress.\n\nContact : glucalc@glucalc.ch\n\n© 2016 Glucalc.ch\n</string>
    <string name="reset_checkbox_foods">Foods and food categories</string>
    <string name="reset_checkbox_meals">Meals settings</string>
    <string name="reset_checkbox_diaries">Meal diary</string>
    <string name="reset_button">Reset</string>
</resources>