<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<TextView
	    android:id="@+id/food_textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_food"
	    android:textSize="20sp" />

    <EditText
        android:id="@+id/food_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_hint" 
        android:inputType="text">
    </EditText>
    
    <TextView
	    android:id="@+id/food_category_textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_food_category"
	    android:textSize="20sp" />
    
    <Spinner android:id="@+id/food_category_spinner"
       	android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:drawSelectorOnTop="true"
        />
    	
    <TextView
	    android:id="@+id/food_carbonhydrate_textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_food_carbonhydrate"
	    android:textSize="20sp" />

    <EditText
        android:id="@+id/food_carbonhydrate_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_carbonhydrate_hint" 
        android:inputType="numberDecimal">
    </EditText>
    
    <TextView
	    android:id="@+id/food_quantity_textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_food_quantity"
	    android:textSize="20sp" />

    <EditText
        android:id="@+id/food_quantity_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_quantity_hint" 
        android:inputType="numberDecimal">
    </EditText>
    
    <TextView
	    android:id="@+id/food_unit_textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_food_unit"
	    android:textSize="20sp" />

    <EditText
        android:id="@+id/food_unit_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_unit_hint" 
        android:inputType="text">
    </EditText>

</LinearLayout>
