<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="30sp"
    >

    <CheckBox android:id="@+id/checkbox_foods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/reset_checkbox_foods"/>
    <CheckBox android:id="@+id/checkbox_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/reset_checkbox_meals"/>
    <CheckBox android:id="@+id/checkbox_diaries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/reset_checkbox_diaries"/>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/reset_button" />

</LinearLayout>