<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/new_meal_food_quantity_textview"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_quantity"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_meal_food_quantity_edittext"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_meal_food_quantity_hint"
            android:inputType="numberDecimal">
        </EditText>

        <TextView
            android:id="@+id/new_meal_food_quantity_unit_textview"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/new_meal_food_carbohydrate_textview"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_carbohydrate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_meal_food_carbohydrate_edittext"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_meal_food_carbohydrate_hint"
            android:inputType="numberDecimal">
        </EditText>

        <TextView
            android:id="@+id/new_meal_food_carbohydrate_unit_textview"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_carbohydrate_quantity"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_meal_food_selected_food_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_new_meal_food_selected_food"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/new_meal_food_selected_food_name_textview"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_selected_food_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/new_meal_food_selected_food_name_value_textview"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/new_meal_food_selected_food_quantity_textview"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_selected_food_quantity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/new_meal_food_selected_food_quantity_value_textview"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/new_meal_food_selected_food_carbohydrate_textview"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_selected_food_carbohydrate"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/new_meal_food_selected_food_carbohydrate_value_textview"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/new_meal_food_selected_food_unit_textview"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_new_meal_food_selected_food_unit"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/new_meal_food_selected_food_unit_value_textview"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>
