<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/meal_type_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_type_name"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"/>

            <ImageButton
                android:id="@+id/meal_type_name_info_button"
                android:background="@color/myBackgroundColor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/information_alert"
                />
        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/meal_type_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_meal_type_name_hint"
                android:inputType="text"
                android:paddingLeft="10dp">
            </EditText>

        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/meal_type_food_target_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_type_food_target"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/meal_type_food_target_info_button"
                android:background="@color/myBackgroundColor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/information_alert"
                />
        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/meal_type_food_target_edittext"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_meal_type_food_target_hint"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp">
            </EditText>

            <TextView
                android:id="@+id/meal_type_food_target_unit_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_type_food_target_unit"/>
        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/meal_type_glycemia_target_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_type_blood_glucose_target"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/meal_type_glycemia_target_info_button"
                android:background="@color/myBackgroundColor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/information_alert"
                />
        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/meal_type_glycemia_target_edittext"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_meal_type_blood_glucose_target_hint"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp">
            </EditText>

            <TextView
                android:id="@+id/meal_type_glycemia_target_unit_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/meal_type_insulin_sensitivity_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_type_insulin_sensitivity"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/meal_type_insulin_sensitivity_info_button"
                android:background="@color/myBackgroundColor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/information_alert"
                />
        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/meal_type_insulin_sensitivity_edittext"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_meal_type_insulin_sensitivity_hint"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp">
            </EditText>

            <TextView
                android:id="@+id/meal_type_insulin_sensitivity_unit_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/meal_type_insulin_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_meal_type_insulin"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/meal_type_insulin_info_button"
                android:background="@color/myBackgroundColor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/information_alert"
                />
        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/meal_type_insulin_edittext"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_meal_type_insulin_hint"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp">
            </EditText>

            <TextView
                android:id="@+id/meal_type_insulin_unit_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insulin_overview_insulin_unit"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>